feat: + XIVItemEquipSlot, XIVItemBaseParams, XIVItemFoodParams

--- a/packages/ui/src/styles/palette.sass
+++ b/packages/ui/src/styles/palette.sass
@@ -1,5 +1,13 @@
 :root
-  --xiv-attr-text-color: #fff
+  --xiv-attr-header-border-color: #616161
+  --xiv-attr-header-color: #adadad
   --xiv-attr-label-color: #bbac94
+  --xiv-attr-value-color: #dedede
   --xiv-attr-success-color: #91e39b
   --xiv-attr-warning-color: #d98298
+
+  --xiv-rarity-1-color: #f3f3f3
+  --xiv-rarity-2-color: #c0ffc0
+  --xiv-rarity-3-color: #5990ff
+  --xiv-rarity-4-color: #b38cff
+  --xiv-rarity-7-color: #d789b6
